[gd_scene load_steps=4 format=1]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://assets/background.jpeg" type="Texture" id=2]
[ext_resource path="res://Player.tscn" type="PackedScene" id=3]

[node name="Node" type="Node"]

script/script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 513.059, 301.555 )
transform/scale = Vector2( 1.70784, 1.02622 )
texture = ExtResource( 2 )

[node name="Player" parent="." instance=ExtResource( 3 )]

[node name="trash_container" type="Node" parent="."]

[node name="Panel" type="Control" parent="."]

anchor/right = 1
anchor/bottom = 1
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 0.0
margin/bottom = 0.0
__meta__ = {
"_edit_lock_": true
}

[node name="score_label" type="Label" parent="Panel"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 2.0
margin/top = 25.0
margin/right = 42.0
margin/bottom = 39.0
text = "0"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="finish_label" type="Label" parent="Panel"]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 281.0
margin/top = 1.0
margin/right = 481.0
margin/bottom = 51.0
text = "Keep collecting garbages"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


